updated to fix black-scholes description panel while on mobile

--- a/black-scholes/src/app/black-scholes/black-scholes.component.scss
+++ b/black-scholes/src/app/black-scholes/black-scholes.component.scss
@@ -35,9 +35,7 @@
                 height:100%;
             }
             .bs_desc {
-                text-align: left;
                 width:100%;
-                height:100%;
                 a {
                     text-decoration: none;
                     color: black;
@@ -46,16 +44,33 @@
                 .equation{
                     width:100%;
                     img {
-                        margin-left: 25%;
+                        width:20em;
+                        height:5em;
+                        margin-left: auto;
+                        margin-right:auto;
                     }
                 }
                 table {
-                    border: 1px solid black;
                     border-collapse: collapse;
+                    margin-left: auto;
+                    margin-right: auto;
                     td,th {
                         border: 2px solid #f0f0f0;
                         border-radius: 1em;
                         padding: 1em;
+                        img {
+                            height:5em;
+                            width:5em;
+                        }
+                        .bigger {
+                            height:5;
+                            width:12em;
+                        }
+                        .deriv {
+                            height:3em;
+                            width: 3em;
+                        }
+                        
                     }
                 }
             }
